--- a/rootdir/system/etc/thermald.conf
+++ b/rootdir/system/etc/thermald.conf
@@ -8,60 +8,60 @@ actions          cpu+gpu+lcd           cpu+gpu+lcd           cpu+gpu+lcd        
 action_info      1512000+400000000+255 1512000+400000000+240 1512000+400000000+170 1512000+400000000+114 918000+400000000+100 702000+200000000+100 5000
 
 [tsens_tz_sensor0]
-sampling         1000
-thresholds       70
-thresholds_clr   67
+sampling         5000
+thresholds       10
+thresholds_clr   5
 actions          none
 action_info      0
 
 [tsens_tz_sensor1]
-sampling         1000
-thresholds       70
-thresholds_clr   67
+sampling         5000
+thresholds       60
+thresholds_clr   57
 actions          none
 action_info      0
 
 [tsens_tz_sensor2]
-sampling         1000
-thresholds       70
-thresholds_clr   67
+sampling         5000
+thresholds       60
+thresholds_clr   57
 actions          none
 action_info      0
 
 [tsens_tz_sensor3]
-sampling         1000
-thresholds       70
-thresholds_clr   67
-actions          none
-action_info      0
+sampling 	 1000
+thresholds       75      78      81      84      87      90
+thresholds_clr   72      75      78      81      84      87
+actions          cpu     cpu     cpu     cpu     cpu     shutdown
+action_info      1296000 1188000 918000  756000  648000  5000
 
 [tsens_tz_sensor4]
-sampling         1000
-thresholds       70
-thresholds_clr   67
+sampling         5000
+thresholds       60
+thresholds_clr   57
 actions          none
 action_info      0
 
 [tsens_tz_sensor5]
-sampling         1000
-thresholds       70
-thresholds_clr   67
+sampling         5000
+thresholds       60
+thresholds_clr   57
 actions          none
 action_info      0
 
 [tsens_tz_sensor6]
-sampling         1000
-thresholds       70
-thresholds_clr   67
+sampling         5000
+thresholds       60
+thresholds_clr   57
 actions          none
 action_info      0
 
 [tsens_tz_sensor7]
 sampling         1000
-thresholds       70          90          95          100         105         110         115         120
-thresholds_clr   67          85          90          95          100         105         110         115
-actions          cpu+battery cpu+battery cpu+battery cpu+battery cpu+battery cpu+battery cpu+battery shutdown
-action_info      1512000+0   1188000+0   810000+1    648000+1    540000+2    487000+2    384000+3    5000
+thresholds       70      85      90      95      99
+thresholds_clr   67      82      87      92      96
+actions          cpu     cpu     cpu     cpu     shutdown
+action_info      1458000 1188000 972000  810000  5000
 
 [tsens_tz_sensor8]
 sampling         1000
@@ -83,3 +83,10 @@ thresholds       70      90      95     100    105    110    115    120
 thresholds_clr   67      85      90     95     100    105    110    115
 actions          cpu     cpu     cpu    cpu    cpu    cpu    cpu    shutdown
 action_info      1512000 1188000 810000 648000 540000 487000 384000 5000
+
+[batt_therm]
+sampling         5000
+thresholds       360                       370                       380                       390                       410                       420                       450
+thresholds_clr   350                       360                       370                       380                       400                       410                       440
+actions          cpu+gpu+lcd+battery       cpu+gpu+lcd+battery       cpu+gpu+lcd+battery       cpu+gpu+lcd+battery       cpu+gpu+lcd+battery       cpu+gpu+lcd+battery       cpu+gpu+lcd+battery
+action_info      1512000+400000000+240+0   1296000+325000000+215+0   1296000+325000000+192+0   1188000+200000000+181+1   1188000+200000000+181+1   1188000+200000000+181+2   1188000+200000000+181+3
